Closed Bug 1538991 Opened 5 years ago Closed 3 years ago

Crash in [@ mozilla::a11y::NotificationController::CoalesceMutationEvents]

Categories

(Core :: Disability Access APIs, defect, P3)

defect

Tracking

()

VERIFIED FIXED
89 Branch
Tracking Status
firefox-esr78 --- wontfix
firefox68 --- wontfix
firefox87 --- wontfix
firefox88 --- verified
firefox89 --- verified

People

(Reporter: Gijs, Assigned: morgan)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-b4cc9529-73fa-472b-b4f0-295ae0190325.

Top 8 frames of crashing thread:

0 libmozglue.dylib MOZ_Crash mfbt/Assertions.h:314
1 libmozglue.dylib MOZ_CrashPrintf mfbt/Assertions.cpp:55
2 XUL mozilla::a11y::NotificationController::CoalesceMutationEvents accessible/base/AccEvent.h:587
3 XUL PLDHashTable::Search const xpcom/ds/PLDHashTable.cpp:351
4 XUL mozilla::a11y::Accessible::InsertChildAt accessible/generic/Accessible.cpp:2078
5 XUL mozilla::a11y::AccessibleWrap::InsertChildAt accessible/mac/AccessibleWrap.mm:119
6 XUL mozilla::a11y::DocAccessible::MoveChild accessible/generic/DocAccessible.cpp:2130
7 XUL mozilla::a11y::DocAccessible::CacheChildrenInSubtree accessible/generic/DocAccessible.cpp:2158

Hit when using spacebar to activate the button that "lets you in" to about:config, on beta 67. Not sure if that's where the crash came from or if that's an accident.

Priority: -- → P3

Morgan, this is spiking in the 88.0rc1 build. Bug 1699053 was the only change to a11y code in that release, and looking at the Nightly reports, I see a similar jump in reports after it landed there as well. Can you please take a look?

Flags: needinfo?(mreschenberg)

yep will check this out today, thanks 😀

Flags: needinfo?(mreschenberg)
Assignee: nobody → mreschenberg

Comment on attachment 9216120 [details]
Bug 1538991: Verify parent exists before calling ReorderEventTarget r?eeejay

Beta/Release Uplift Approval Request

  • User impact if declined: Users may continue to experience this crash.
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Some users report this crash happening when they navigate to about:config for the first time (and click the 'accept and continue') button. Most of these crashes are on windows, but from our testing it doesn't seem to be something that happens consistently, so I'm not sure if QA will be able to verify.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This code adds a null check, which we arguably should've been doing already. It may be covered by our automatic testing -- we haven't had any failures, but it also may be an intermittent we haven't seen, so its hard to tell. Because this crash isn't consistently reproducible, its possible this patch doesn't actually fix the problem completely, but nevertheless it won't break anything further.
  • String changes made/needed:
Attachment #9216120 - Flags: approval-mozilla-release?
Flags: qe-verify+
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c9e1a934ff12
Verify parent exists  before calling ReorderEventTarget r=eeejay

To add to that risk assessment above: if you filter the crash by "accessibility in process", it looks like this doesn't affect NVDA or Jaws, our primary AT targets on windows (https://searchfox.org/mozilla-central/source/accessible/windows/msaa/Compatibility.h#98) They seem to affect users on Vispero Shared, Kazaguru, and "unknown" a11y technologies. You can see how those populations compare to our total AT usage here: https://sql.telemetry.mozilla.org/dashboard/platform-accessibility

Comment on attachment 9216120 [details]
Bug 1538991: Verify parent exists before calling ReorderEventTarget r?eeejay

Thanks, let's try taking this fix instead of backing out then. Approved for 88.0rc2.

Attachment #9216120 - Flags: approval-mozilla-release? → approval-mozilla-release+
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
QA Whiteboard: [qa-triaged]

(In reply to Morgan Reschenberg [:morgan] from comment #6)

They seem to affect users on Vispero Shared, Kazaguru, and "unknown" a11y technologies.

Unfortunately I could not find the software to install in order to reproduce/verify this issue. Do you know a place where I could download and install the software affected by this crash to give it a try?

Flags: needinfo?(mreschenberg)

No crash reports from the rc2 build so far anyway :)

I think we can call this verified by way of crash-stats.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Flags: needinfo?(mreschenberg)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: