Bug 1538991: Verify parent exists  before calling ReorderEventTarget r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D112205